ifcviewer/ifcengine/include/ifcengine.h


typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInstance;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiRep;
typedef	int_t			SdaiPrimitiveType;
typedef	int_t			SdaiIterator;
SdaiModel		DECL STDC	engiOpenModelByStream(
									SdaiRep					repository,
									const void				* callback,
									const char				* schemaName
								);
static	inline	SdaiModel	engiOpenModelByStream(
									SdaiRep					repository,
									const void				* callback,
									char					* schemaName
								)
{
	return	engiOpenModelByStream(
					repository,
					callback,
					(const char*) schemaName
				);
}
SdaiEntity		DECL STDC	engiGetEntityElement(
									SdaiModel				model,
									SdaiInteger				index
								);
SdaiInteger		DECL STDC	sdaiGetMemberCount(
									SdaiAggr				aggregate
								);
void			DECL STDC	internalSetLink(
									SdaiInstance			instance,
									const char				* attributeName,
									int_t					linked_id
								);
static	inline	void	internalSetLink(
								SdaiInstance			instance,
								char					* attributeName,
								int_t					linked_id
							)
{
	return	internalSetLink(
					instance,
					(const char*) attributeName,
					linked_id
				);
}
void			DECL STDC	internalAddAggrLink(
									const SdaiAggr			aggregate,
									int_t					linked_id
								);
void			DECL STDC	engiGetNotReferedAggr(
									SdaiModel				model,
									int_t					* value
								);
void			DECL STDC	engiGetAttributeAggr(
									SdaiInstance			instance,
									int_t					* value
								);
void			DECL STDC	engiGetAggrUnknownElement(
									const SdaiAggr			aggregate,
									int_t					elementIndex,
									SdaiPrimitiveType		* valueType,
									void					* value
								);
int_t			DECL STDC	sdaiErrorQuery(
								);
void			DECL STDC	owlGetModel(
									SdaiModel				model,
									int64_t					* owlModel
								);
void			DECL STDC	owlGetInstance(
									SdaiModel				model,
									SdaiInstance			instance,
									int64_t					* owlInstance
								);
void			DECL STDC	owlMaterialInstance(
									SdaiInstance			instanceBase,
									SdaiInstance			instanceContext,
									int64_t					* owlInstance
								);
void			DECL STDC	owlBuildInstance(
									SdaiModel				model,
									SdaiInstance			instance,
									int64_t					* owlInstance
								);
void			DECL STDC	owlBuildInstanceInContext(
									SdaiInstance			instanceBase,
									SdaiInstance			instanceContext,
									int64_t					* owlInstance
								);
bool			DECL STDC	engiInstanceUsesSegmentation(
									SdaiInstance			instance
								);
void			DECL STDC	owlBuildInstances(
									SdaiModel				model,
									SdaiInstance			instance,
									int64_t					* owlInstanceComplete,
									int64_t					* owlInstanceSolids,
									int64_t					* owlInstanceVoids
								);
void			DECL STDC	owlGetMappedItem(
									SdaiModel				model,
									SdaiInstance			instance,
									int64_t					* owlInstance,
									double					* transformationMatrix
								);
int_t			DECL STDC	getInstanceDerivedPropertiesInModelling(
									SdaiModel				model,
									SdaiInstance			instance,
									double					* height,
									double					* width,
									double					* thickness
								);
int_t			DECL STDC	getInstanceDerivedBoundingBox(
									SdaiModel				model,
									SdaiInstance			instance,
									double					* Ox,
									double					* Oy,
									double					* Oz,
									double					* Vx,
									double					* Vy,
									double					* Vz
								);
int_t			DECL STDC	getInstanceTransformationMatrix(
									SdaiModel				model,
									SdaiInstance			instance,
									double					* _11,
									double					* _12,
									double					* _13,
									double					* _14,
									double					* _21,
									double					* _22,
									double					* _23,
									double					* _24,
									double					* _31,
									double					* _32,
									double					* _33,
									double					* _34,
									double					* _41,
									double					* _42,
									double					* _43,
									double					* _44
								);
int_t			DECL STDC	getInstanceDerivedTransformationMatrix(
									SdaiModel				model,
									SdaiInstance			instance,
									double					* _11,
									double					* _12,
									double					* _13,
									double					* _14,
									double					* _21,
									double					* _22,
									double					* _23,
									double					* _24,
									double					* _31,
									double					* _32,
									double					* _33,
									double					* _34,
									double					* _41,
									double					* _42,
									double					* _43,
									double					* _44
								);
void			DECL * STDC	internalGetBoundingBox(
									SdaiModel				model,
									SdaiInstance			instance
								);
void			DECL * STDC	internalGetCenter(
									SdaiModel				model,
									SdaiInstance			instance
								);
int_t			DECL STDC	getGlobalPlacement(
									SdaiModel				model,
									double					* origin
								);
int_t			DECL STDC	setGlobalPlacement(
									SdaiModel				model,
									const double			* origin,
									bool					includeRotation
								);
int_t			DECL STDC	getTimeStamp(
									SdaiModel				model
								);
int_t			DECL STDC	setInstanceReference(
									SdaiInstance			instance,
									int_t					value
								);
int_t			DECL STDC	getInstanceReference(
									SdaiInstance			instance
								);
int_t			DECL STDC	inferenceInstance(
									SdaiInstance			instance
								);
int_t			DECL STDC	sdaiValidateSchemaInstance(
									SdaiInstance			instance
								);
int_t			DECL STDC	engiAttrIsInverse(
									const SdaiAttr			attribute
								);
int_t			DECL STDC	xxxxOpenModelByStream(
									int_t					repository,
									const void				* callback,
									const char				* schemaName
								);
static	inline	int_t	xxxxOpenModelByStream(
								int_t					repository,
								const void				* callback,
								char					* schemaName
							)
{
	return	xxxxOpenModelByStream(
					repository,
					callback,
					(const char*) schemaName
				);
}
SdaiIterator	DECL STDC	sdaiCreateIterator(
									const SdaiAggr			aggregate
								);